--- a/tarzan/pixiplayground/src/main/resources/templates/index.html
+++ b/tarzan/pixiplayground/src/main/resources/templates/index.html
@@ -60,6 +60,89 @@
     stage.addChild(rectangle);
     renderer.render(stage);
 
+    //draw a circle
+    var circle = new PIXI.Graphics();
+    circle.beginFill(0x9966FF);
+    circle.drawCircle(64, 130, 32);
+    circle.endFill();
+    //circle.x = 64;
+    //circle.y = 130;
+    stage.addChild(circle);
+    renderer.render(stage);
+
+    //draw an ellipse
+    var ellipse = new PIXI.Graphics();
+    ellipse.beginFill(0xFFFF00);
+    ellipse.drawEllipse(0, 0, 50, 20);
+    ellipse.endFill();
+    ellipse.x = 180;
+    ellipse.y = 130;
+    stage.addChild(ellipse);
+    renderer.render(stage);
+
+    //draw a rounded rectangle
+    var roundBox = new PIXI.Graphics();
+    roundBox.lineStyle(4, 0x99CCFF, 1);
+    roundBox.beginFill(0xFF9933);
+    roundBox.drawRoundedRect(0, 0, 84, 36, 10)
+    roundBox.endFill();
+    roundBox.x = 48;
+    roundBox.y = 190;
+    stage.addChild(roundBox);
+    renderer.render(stage);
+
+    //draw a line
+    var line = new PIXI.Graphics();
+    line.lineStyle(4, 0xFFFFFF, 1);
+    line.moveTo(0, 0);
+    line.lineTo(80, 50);
+    line.x = 32;
+    line.y = 32;
+    stage.addChild(line);
+    renderer.render(stage);
+
+    /**
+     * POLYGON TIME
+     */
+    var triangle = new PIXI.Graphics();
+    triangle.beginFill(0x66FF33);
+
+    //Use `drawPolygon` to define the triangle as
+    //a path array of x/y positions
+
+    triangle.drawPolygon([
+        -32, 64,             //First point
+        32, 64,              //Second point
+        0, 0                 //Third point
+    ]);
+
+    //Fill shape's color
+    triangle.endFill();
+
+    //Position the triangle after you've drawn it.
+    //The triangle's x/y position is anchored to its first point in the path
+    triangle.x = 180;
+    triangle.y = 22;
+
+    stage.addChild(triangle);
+    renderer.render(stage);
+
+    /**
+     * END POLYGON TIME
+     */
+
+
+    //draw some text
+    var message = new PIXI.Text(
+        "Hello Pixi!",
+        {fontFamily: "Arial", fontSize: 32, fill: "white"}
+        );
+
+    message.position.set(54, 96);
+    stage.addChild(message);
+    renderer.render(stage);
+
+
 
 </script>
 </html>
