--- a/tarzan/pixiplayground/src/main/resources/templates/index.html
+++ b/tarzan/pixiplayground/src/main/resources/templates/index.html
@@ -7,10 +7,14 @@
 
 <body>
 <button onclick="drawShapesAndText(renderer, stage)">ShapesAndText</button>
+<button onclick="drawSprites(renderer, stage)">sprites</button>
+
 </body>
 
 <script src="js/pixi.min.js"></script>
 <script src="js/tutorial/shapesAndText.js"></script>
+<script src="js/tutorial/sprites.js"></script>
+
 <script>
 
     function setupCanvas(){
