--- a/tarzan/splitpies/src/main/resources/templates/index.html
+++ b/tarzan/splitpies/src/main/resources/templates/index.html
@@ -1,1 +1,31 @@
-This is a test
+<script src="js/lib/jquery-3.2.1.min.js"></script>
+<script src="js/lib/pixi.min.js"></script>
+<script src="js/aliases.js"></script>
+<script src="js/pizza.js"></script>
+<script>
+
+
+    function setupCanvas() {
+        var renderer = autoDetectRenderer(500, 500);
+        renderer.view.style.position = "absolute";
+        renderer.view.style.display = "block";
+        renderer.autoResize = true;
+
+        //set the background color of the canvas
+        renderer.backgroundColor = 0x555555;
+
+        //give the canvas a dashed border
+        renderer.view.style.border = "1px dashed black";
+
+        //Add the canvas to the HTML document
+        document.body.appendChild(renderer.view);
+
+        return renderer;
+    }
+
+    $(document).ready(function(){
+        setupCanvas();
+    })
+
+</script>
+
