Gettin' ready for some delicious cuts

--- a/tarzan/splitpies/src/main/resources/templates/index.html
+++ b/tarzan/splitpies/src/main/resources/templates/index.html
@@ -29,8 +29,10 @@
         renderer = setupCanvas();
         var stage = new Container();
         pizza = getPlainPizza(renderer);
+        var cuts = cutPizza(pizza, 8); //TODO get cuts from user
         stage.addChild(pizza);
-        renderer.render(pizza);
+        //stage.addChild(cuts);
+        renderer.render(stage);
     })
 
 </script>
